syntax="proto3";
option csharp_namespace="Proto";

import "common.proto";

package standard;

message FileStorageUploadRequest {
  uint32 id=1;
  string file_name=2;
  bytes content=3;
}
message FileStorageUploadReply {
  common.ResultReply result=1;
}

message FileStorageDownloadRequest {
  uint32 id=1;
  string file_name=2;
}
message FileStorageDownloadReply {
  common.ResultReply result=1;
  bytes content=2;
}

message FileStorageRemoveRequest {
  uint32 id=1;
  string file_name=2;
}
message FileStorageRemoveReply {
  common.ResultReply result=1;
}

message FileStorageServerUser {
  uint32 id=1;
  string name=2;
}
message FileStorageServerDataRequest {
  uint32 id=1;
  bytes key=2;
}
message FileStorageServerDataReply {
  common.ResultReply result=1;
  uint32 id_connected_to=2;
  repeated FileStorageServerUser users=3;
  repeated string file_names=4;
  repeated bytes public_key=5;
  bytes symmetric_key=6;
}

message FileStorageJoinUserRequest {
  uint32 id_from=1;
  uint32 id_to=2;
  repeated bytes public_key=3;
}
message FileStorageJoinUserReply {
  common.ResultReply result=1;
}

service FileStorage {
  rpc upload        (FileStorageUploadRequest)     returns(FileStorageUploadReply);
  rpc download      (FileStorageDownloadRequest)   returns(FileStorageDownloadReply);
  rpc remove        (FileStorageRemoveRequest)     returns(FileStorageRemoveReply);
  rpc getServerData (FileStorageServerDataRequest) returns(FileStorageServerDataReply);
  rpc joinUser      (FileStorageJoinUserRequest)   returns(FileStorageJoinUserReply);
}
